- ensure order of insertion is kept in Sets - fixed tests