@@ -9,8 +9,12 @@ import org.junit.jupiter.api.Test;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.time.OffsetDateTime;
 import java.time.format.DateTimeFormatter;
+import java.util.Comparator;
+import java.util.LinkedHashSet;
+import java.util.List;
 import java.util.Set;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -19,26 +23,36 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 public class MarkdownWriterIntegrationTest {
 
     private static final DateTimeFormatter DATE_TIME_FORMATTER = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
-    private static final String TEST_FILE_PATH = "build/test.md";
+    private static final String TEST_FILE_PATH = "build/test";
 
     @Test
     void testWriteResultsToFile() throws IOException {
         Path expectedPath = Path.of(TEST_FILE_PATH).toAbsolutePath();
-        MarkdownWriter writer = new MarkdownWriter(TEST_FILE_PATH);
-        Link workingLink = new WorkingLink("https://www.working.com", 1, Set.of("Heading1", "Heading2", "Heading3"), Set.of("Link3"));
+        MarkdownWriter writer = new MarkdownWriter(TEST_FILE_PATH, new MarkdownFormatter());
+        Set<String> headings = new LinkedHashSet<>(List.of("Heading1", "Heading2", "Heading3"));
+        Link workingLink = new WorkingLink("https://www.working.com", 1, headings, Set.of("Link3"));
         Link brokenLink = new BrokenLink("https://www.broken.com", 5);
+        Set<Link> links = new LinkedHashSet<>(List.of(workingLink, brokenLink));
         OffsetDateTime timestamp = OffsetDateTime.now();
         String expectedContent = """
                 # Crawl Results
                 
-                Results from %s
+                Timestamp: %s
                 
-                %s
-                %s
-                """.formatted(timestamp.format(DATE_TIME_FORMATTER), workingLink, brokenLink);
+                ## https://www.working.com
+                Depth: 1
+                ### Headings
+                Heading1
+                Heading2
+                Heading3
+                
+                ## https://www.broken.com (broken)
+                Depth: 5
+                
+                """.formatted(timestamp.format(DATE_TIME_FORMATTER));
 
-        Path filePath = writer.writeResultsToFile(Set.of(workingLink, brokenLink), timestamp);
-        assertEquals(expectedPath, filePath.toAbsolutePath());
+        Path filePath = writer.writeResultsToFile(links, timestamp);
+        assertEquals(expectedPath + "/report-" + timestamp.format(DateTimeFormatter.ofPattern("yyyyMMdd-HHmmss")) + ".md", filePath.toAbsolutePath().toString());
         assertTrue(Files.exists(filePath));
 
         StringBuilder builder = new StringBuilder();
@@ -49,8 +63,19 @@ public class MarkdownWriterIntegrationTest {
     }
 
     @AfterEach
-    void tearDown() throws IOException {
-        Files.deleteIfExists(Path.of(TEST_FILE_PATH));
+    void teardown() throws IOException {
+        Path path = Paths.get(TEST_FILE_PATH);
+        if (Files.exists(path)) {
+            try (var paths = Files.walk(path)) {
+                paths.sorted(Comparator.reverseOrder())
+                        .forEach(p -> {
+                            try {
+                                Files.delete(p);
+                            } catch (IOException e) {
+                                throw new RuntimeException("Error when deleting file: path = %s".formatted(p), e);
+                            }
+                        });
+            }
+        }
     }
-
 }
